--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "react": "^18.2.0",
     "redis": "^4.6.10",
     "uuid4": "^2.0.3"
   }
